--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
   <meta charset="utf-8">
   <title>Mahesh's Personal website.</title>
+  <style>
+    h3{
+      border-style:"dashed";
+    }
+  </style>
 </head>
 
 <body>
