--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <table cellspacing="30">
     <tr>
-      <td><img src="C:\Users\MAHESH\OneDrive\Documents\My documents\PHOTO-modified.png" alt="Mahesh's profile pic" height="200"></td>
+      <td><img src="https://photos.google.com/photo/AF1QipMVnaAhfEW8Wb69TD6KDwv5z5ycJFCylJYH7bUk" alt="Mahesh's profile pic" height="200"></td>
       <td>
         <h1>M Saimahesh</h1>
         <em>
